samples/_failures_safe/1761040817_759ca7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c232fe6.c: In function ‘main’:
./samples/SAFE/__tmp_9c232fe6.c:177:13: error: expected ‘;’ at end of input
  177 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_9c232fe6.c:177:5: error: expected declaration or statement at end of input
  177 |     return 0
      |     ^~~~~~
